test/regress/coverage-amount-parse-long-unget.test
; Coverage for amount.cc
; parse_quantity trailing period followed by digit (unget path).
; A number so long it fills the 255-char parse buffer, leaving .50 unread.
; After stripping the trailing period and putting it back, the peek
; finds the period followed by digit 5, triggering the unget on

2024/01/01 Test
    Expenses:Food    -1111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111.50
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 8:
While parsing posting:
  Expenses:Food    -1111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111.50
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Unexpected char '0' (Note: inline math requires parentheses)
end test
